--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -29,6 +29,14 @@ jobs:
           fi
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
 
+      - name: Generate image tag
+        id: image
+        run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      - name: Export image tag for Terraform
+        run: echo "TF_VAR_image_tag=${{ steps.image.outputs.tag }}" >> $GITHUB_ENV
+
+
       - name: Authenticate to GCP
         id: auth
         uses: google-github-actions/auth@v1
