--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -11,11 +11,14 @@
 #     environment:
 #       name: development
 
+#     env:
+#       REGION: europe-west3
+
 #     steps:
 #       - name: Checkout
 #         uses: actions/checkout@v3
 
-#       # Parse product folder name
+#       # Parse product
 #       - name: Parse product
 #         id: product
 #         run: |
@@ -38,23 +41,36 @@
 #           fi
 #           echo "gcp_project=$GCP_PROJECT" >> $GITHUB_OUTPUT
 
+#       - name: Authenticate to GCP
+#         id: auth
+#         uses: google-github-actions/auth@v1
+#         with:
+#           credentials_json: ${{ secrets.GCP_SA_KEY }}
+
 #       # Configure Docker auth
 #       - name: Configure Docker for Artifact Registry
-#         run: gcloud auth configure-docker europe-west3-docker.pkg.dev --quiet
+#         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
 #       # Generate image tag
 #       - name: Generate tag
 #         id: tag
 #         run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
+#       # Ensure Artifact Registry exists
+#       # Ensure Artifact Registry exists
 #       - name: Ensure Artifact Registry exists
 #         run: |
-#           if ! gcloud artifacts repositories describe ${{ env.REPOSITORY_NAME }} --location=${{ env.REGION }} >/dev/null 2>&1; then
+#           REPO_NAME="vector-${{ steps.product.outputs.product }}-repository"
+#           REGION="${{ env.REGION }}"
+#           PROJECT_ID="${{ steps.tfvars.outputs.gcp_project }}"
+
+#           if ! gcloud artifacts repositories describe "$REPO_NAME" --location="$REGION" --project="$PROJECT_ID" >/dev/null 2>&1; then
 #             echo "Repository does not exist. Creating..."
-#             gcloud artifacts repositories create ${{ env.REPOSITORY_NAME }} \
+#             gcloud artifacts repositories create "$REPO_NAME" \
 #               --repository-format=docker \
-#               --location=${{ env.REGION }} \
-#               --description="Vector repo for ${{ env.ENV }}"
+#               --location="$REGION" \
+#               --project="$PROJECT_ID" \
+#               --description="Vector repo for $REPO_NAME"
 #           else
 #             echo "Repository already exists."
 #           fi
@@ -63,10 +79,11 @@
 #       # Build and push image
 #       - name: Build and push image
 #         run: |
-#           IMAGE_URI="europe-west3-docker.pkg.dev/${{ steps.tfvars.outputs.gcp_project }}/${{ steps.product.outputs.product }}-dev-repository/my-vector-local:${{ steps.tag.outputs.tag }}"
+#           IMAGE_URI="${{ env.REGION }}-docker.pkg.dev/${{ steps.tfvars.outputs.gcp_project }}/vector-${{ steps.product.outputs.product }}-repository/my-vector-local:${{ steps.tag.outputs.tag }}"
 #           echo "IMAGE_URI=$IMAGE_URI"
 #           docker build -t "$IMAGE_URI" .
 #           docker push "$IMAGE_URI"
+
 
 #       # Setup Terraform
 #       - name: Setup Terraform
@@ -74,13 +91,26 @@
 
 #       # Terraform Init
 #       - name: Terraform Init
-#         run: terraform init
+#         env:
+#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
+#         run: |
+#           terraform init \
+#             -backend-config="bucket=vector-datadog-tfstate-ash" \
+#             -backend-config="prefix=vector/${{ steps.product.outputs.product }}-dev"
 #         working-directory: deploy/terraform
 
 #       # Terraform Apply
 #       - name: Terraform Apply (Dev)
+#         env:
+#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
 #         run: terraform apply -auto-approve -var="image_tag=${{ steps.tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.dev.tfvars"
 #         working-directory: deploy/terraform
+
+
+#       # Export tag for prod
+#       - name: Set output tag
+#         id: set-tag
+#         run: echo "tag=${{ steps.tag.outputs.tag }}" >> $GITHUB_OUTPUT
 
 #   deploy-prod:
 #     needs: deploy-dev
@@ -88,11 +118,14 @@
 #     environment:
 #       name: production
 
+#     env:
+#       REGION: europe-west3
+
 #     steps:
 #       - name: Checkout
 #         uses: actions/checkout@v3
 
-#       # Parse product folder name
+#       # Parse product
 #       - name: Parse product
 #         id: product
 #         run: |
@@ -126,7 +159,7 @@
 
 #       # Terraform Apply
 #       - name: Terraform Apply (Prod)
-#         run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
+#         run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.set-tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
 #         working-directory: deploy/terraform
 
 
@@ -145,6 +178,7 @@ jobs:
 
     env:
       REGION: europe-west3
+      TF_BUCKET: vector-datadog-tfstate-ash
 
     steps:
       - name: Checkout
@@ -160,18 +194,20 @@ jobs:
           fi
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
 
-      # Parse gcp_project from tfvars
-      - name: Parse gcp_project from tfvars
+      # Parse gcp_project and pubsub_topic_name from tfvars
+      - name: Parse variables from tfvars
         id: tfvars
         run: |
           TFVARS_FILE=products/${{ steps.product.outputs.product }}/terraform.dev.tfvars
           echo "Looking for tfvars file at: $TFVARS_FILE"
           GCP_PROJECT=$(grep -E '^ *gcp_project *=' "$TFVARS_FILE" | cut -d '"' -f2)
-          if [ -z "$GCP_PROJECT" ]; then
-            echo "❌ gcp_project not found in $TFVARS_FILE"
+          PUBSUB_TOPIC_NAME=$(grep -E '^ *pubsub_topic_name *=' "$TFVARS_FILE" | cut -d '"' -f2)
+          if [ -z "$GCP_PROJECT" ] || [ -z "$PUBSUB_TOPIC_NAME" ]; then
+            echo "❌ gcp_project or pubsub_topic_name not found in $TFVARS_FILE"
             exit 1
           fi
           echo "gcp_project=$GCP_PROJECT" >> $GITHUB_OUTPUT
+          echo "pubsub_topic_name=$PUBSUB_TOPIC_NAME" >> $GITHUB_OUTPUT
 
       - name: Authenticate to GCP
         id: auth
@@ -183,12 +219,23 @@ jobs:
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
+      # Render vector.yaml from template
+      - name: Render vector.yaml
+        run: |
+          TEMPLATE_FILE=products/${{ steps.product.outputs.product }}/vector.yaml.tmpl
+          OUTPUT_FILE=vector.yaml
+          cat "$TEMPLATE_FILE" \
+            | sed "s|\${gcp_project}|${{ steps.tfvars.outputs.gcp_project }}|g" \
+            | sed "s|\${pubsub_topic_name}|${{ steps.tfvars.outputs.pubsub_topic_name }}|g" \
+            > "$OUTPUT_FILE"
+          echo "Rendered vector.yaml:"
+          cat "$OUTPUT_FILE"
+
       # Generate image tag
       - name: Generate tag
         id: tag
         run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      # Ensure Artifact Registry exists
       # Ensure Artifact Registry exists
       - name: Ensure Artifact Registry exists
         run: |
@@ -207,7 +254,6 @@ jobs:
             echo "Repository already exists."
           fi
 
-
       # Build and push image
       - name: Build and push image
         run: |
@@ -215,7 +261,6 @@ jobs:
           echo "IMAGE_URI=$IMAGE_URI"
           docker build -t "$IMAGE_URI" .
           docker push "$IMAGE_URI"
-
 
       # Setup Terraform
       - name: Setup Terraform
@@ -227,7 +272,7 @@ jobs:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: |
           terraform init \
-            -backend-config="bucket=vector-datadog-tfstate-ash" \
+            -backend-config="bucket=${{ env.TF_BUCKET }}" \
             -backend-config="prefix=vector/${{ steps.product.outputs.product }}-dev"
         working-directory: deploy/terraform
 
@@ -237,7 +282,6 @@ jobs:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: terraform apply -auto-approve -var="image_tag=${{ steps.tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.dev.tfvars"
         working-directory: deploy/terraform
-
 
       # Export tag for prod
       - name: Set output tag
@@ -252,6 +296,7 @@ jobs:
 
     env:
       REGION: europe-west3
+      TF_BUCKET: vector-datadog-tfstate-ash
 
     steps:
       - name: Checkout
@@ -263,7 +308,7 @@ jobs:
         run: |
           PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
           if [ -z "$PRODUCT" ]; then
-            PRODUCT="br"  # fallback
+            PRODUCT="br"
           fi
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
 
