--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -331,10 +331,17 @@ jobs:
 
       # Terraform Init
       - name: Terraform Init
-        run: terraform init
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
+        run: |
+          terraform init \
+            -backend-config="bucket=${{ env.TF_BUCKET }}" \
+            -backend-config="prefix=vector/${{ steps.product.outputs.product }}-prod"
         working-directory: deploy/terraform
 
       # Terraform Apply
       - name: Terraform Apply (Prod)
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.set-tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
         working-directory: deploy/terraform
