--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -345,9 +345,12 @@ jobs:
             -backend-config="prefix=vector/${{ steps.product.outputs.product }}-prod"
         working-directory: deploy/terraform
 
-      # Terraform Apply
       - name: Terraform Apply (Prod)
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-        run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.set-tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
+        run: terraform apply -auto-approve \
+          -var="image_tag=${{ needs.deploy-dev.outputs.set-tag.outputs.tag }}" \
+          -var="gcp_project=${{ steps.tfvars.outputs.gcp_project }}" \
+          -var="product=${{ steps.product.outputs.product }}" \
+          -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
         working-directory: deploy/terraform
