--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -187,12 +187,22 @@ jobs:
         uses: actions/checkout@v3
 
       # Parse product
-      - name: Parse product
+      # - name: Parse product
+      #   id: product
+      #   run: |
+      #     PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
+      #     if [ -z "$PRODUCT" ]; then
+      #       PRODUCT="br"  # fallback
+      #     fi
+      #     echo "product=$PRODUCT" >> $GITHUB_OUTPUT
+
+      - name: Parse product from changes
         id: product
         run: |
           PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
           if [ -z "$PRODUCT" ]; then
-            PRODUCT="br"  # fallback
+            echo "❌ No product changes detected. Skipping workflow."
+            exit 0
           fi
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
 
