--- a/.github/workflows/plan.yaml
+++ b/.github/workflows/plan.yaml
@@ -13,10 +13,6 @@ jobs:
       TF_BUCKET: vector-datadog-tfstate-ash
       REGION: europe-west3
 
-    outputs:
-      product: ${{ steps.product.outputs.product }}
-      tag: ${{ steps.image.outputs.tag }}
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -26,18 +22,12 @@ jobs:
       - name: Parse product from changes
         id: product
         run: |
-          FILES=$(git diff --name-only origin/main...HEAD)
-          echo "Changed files:"
-          echo "$FILES"
-
-          PRODUCT=$(echo "$FILES" | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
+          PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
           if [ -z "$PRODUCT" ]; then
             echo "❌ No product changes detected. Skipping workflow."
             exit 0
           fi
-          echo "Detected product: $PRODUCT"
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-
 
       - name: Generate image tag
         id: image
