--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -1,218 +1,9 @@
-# name: Deploy Vector Collector
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   deploy-dev:
-#     runs-on: ubuntu-latest
-#     environment:
-#       name: development
-
-#     env:
-#       REGION: europe-west3
-#       TF_BUCKET: vector-datadog-tfstate-ash
-#     outputs:
-#       tag: ${{ steps.set-tag.outputs.tag }}
-
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-
-#       # Parse product
-#       # - name: Parse product
-#       #   id: product
-#       #   run: |
-#       #     PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
-#       #     if [ -z "$PRODUCT" ]; then
-#       #       PRODUCT="br"  # fallback
-#       #     fi
-#       #     echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-
-#       - name: Parse product from changes
-#         id: product
-#         run: |
-#           FILES=$(git diff --name-only origin/main...HEAD)
-#           echo "Changed files:"
-#           echo "$FILES"
-
-#           PRODUCT=$(echo "$FILES" | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
-#           if [ -z "$PRODUCT" ]; then
-#             echo "❌ No product changes detected. Skipping workflow."
-#             exit 0
-#           fi
-#           echo "Detected product: $PRODUCT"
-#           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-
-#       # Parse gcp_project and pubsub_topic_name from tfvars
-#       - name: Parse variables from tfvars
-#         id: tfvars
-#         run: |
-#           TFVARS_FILE=products/${{ steps.product.outputs.product }}/terraform.dev.tfvars
-#           echo "Looking for tfvars file at: $TFVARS_FILE"
-#           GCP_PROJECT=$(grep -E '^ *gcp_project *=' "$TFVARS_FILE" | cut -d '"' -f2)
-#           PUBSUB_TOPIC_NAME=$(grep -E '^ *pubsub_topic_name *=' "$TFVARS_FILE" | cut -d '"' -f2)
-#           if [ -z "$GCP_PROJECT" ] || [ -z "$PUBSUB_TOPIC_NAME" ]; then
-#             echo "❌ gcp_project or pubsub_topic_name not found in $TFVARS_FILE"
-#             exit 1
-#           fi
-#           echo "gcp_project=$GCP_PROJECT" >> $GITHUB_OUTPUT
-#           echo "pubsub_topic_name=$PUBSUB_TOPIC_NAME" >> $GITHUB_OUTPUT
-
-#       - name: Authenticate to GCP
-#         id: auth
-#         uses: google-github-actions/auth@v1
-#         with:
-#           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-#       # Configure Docker auth
-#       - name: Configure Docker for Artifact Registry
-#         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
-
-#       # Render vector.yaml from template
-#       - name: Render vector.yaml
-#         run: |
-#           TEMPLATE_FILE=products/${{ steps.product.outputs.product }}/vector.yaml.tmpl
-#           OUTPUT_FILE=vector.yaml
-#           cat "$TEMPLATE_FILE" \
-#             | sed "s|\${gcp_project}|${{ steps.tfvars.outputs.gcp_project }}|g" \
-#             | sed "s|\${pubsub_topic_name}|${{ steps.tfvars.outputs.pubsub_topic_name }}|g" \
-#             > "$OUTPUT_FILE"
-#           echo "Rendered vector.yaml:"
-#           cat "$OUTPUT_FILE"
-
-#       # Generate image tag
-#       - name: Generate tag
-#         id: tag
-#         run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
-#       # Ensure Artifact Registry exists
-#       - name: Ensure Artifact Registry exists
-#         run: |
-#           REPO_NAME="vector-${{ steps.product.outputs.product }}-repository"
-#           REGION="${{ env.REGION }}"
-#           PROJECT_ID="${{ steps.tfvars.outputs.gcp_project }}"
-
-#           if ! gcloud artifacts repositories describe "$REPO_NAME" --location="$REGION" --project="$PROJECT_ID" >/dev/null 2>&1; then
-#             echo "Repository does not exist. Creating..."
-#             gcloud artifacts repositories create "$REPO_NAME" \
-#               --repository-format=docker \
-#               --location="$REGION" \
-#               --project="$PROJECT_ID" \
-#               --description="Vector repo for $REPO_NAME"
-#           else
-#             echo "Repository already exists."
-#           fi
-
-#       # Build and push image
-#       - name: Build and push image
-#         run: |
-#           IMAGE_URI="${{ env.REGION }}-docker.pkg.dev/${{ steps.tfvars.outputs.gcp_project }}/vector-${{ steps.product.outputs.product }}-repository/my-vector-local:${{ steps.tag.outputs.tag }}"
-#           echo "IMAGE_URI=$IMAGE_URI"
-#           docker build -t "$IMAGE_URI" .
-#           docker push "$IMAGE_URI"
-
-#       # Setup Terraform
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v3
-
-#       # Terraform Init
-#       - name: Terraform Init
-#         env:
-#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-#         run: |
-#           terraform init \
-#             -backend-config="bucket=${{ env.TF_BUCKET }}" \
-#             -backend-config="prefix=vector/${{ steps.product.outputs.product }}-dev"
-#         working-directory: deploy/terraform
-
-#       # Terraform Apply
-#       - name: Terraform Apply (Dev)
-#         env:
-#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-#         run: terraform apply -auto-approve -var="image_tag=${{ steps.tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.dev.tfvars"
-#         working-directory: deploy/terraform
-
-#       # Export tag for prod
-#       - name: Set output tag
-#         id: set-tag
-#         run: echo "tag=${{ steps.tag.outputs.tag }}" >> $GITHUB_OUTPUT
-
-#   deploy-prod:
-#     needs: deploy-dev
-#     runs-on: ubuntu-latest
-#     environment:
-#       name: production
-
-#     env:
-#       REGION: europe-west3
-#       TF_BUCKET: vector-datadog-tfstate-ash
-
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-
-#       # Parse product
-#       - name: Parse product
-#         id: product
-#         run: |
-#           PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
-#           if [ -z "$PRODUCT" ]; then
-#             echo "No Product to pass"
-#             exit 1
-#           fi
-#           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-
-#       # Parse gcp_project from tfvars
-#       - name: Parse gcp_project from tfvars
-#         id: tfvars
-#         run: |
-#           TFVARS_FILE=products/${{ steps.product.outputs.product }}/terraform.prod.tfvars
-#           echo "Looking for tfvars file at: $TFVARS_FILE"
-#           GCP_PROJECT=$(grep -E '^ *gcp_project *=' "$TFVARS_FILE" | cut -d '"' -f2)
-#           if [ -z "$GCP_PROJECT" ]; then
-#             echo "❌ gcp_project not found in $TFVARS_FILE"
-#             exit 1
-#           fi
-#           echo "gcp_project=$GCP_PROJECT" >> $GITHUB_OUTPUT
-
-#       - name: Authenticate to GCP
-#         id: auth
-#         uses: google-github-actions/auth@v1
-#         with:
-#           credentials_json: ${{ secrets.GCP_SA_KEY }}
-
-#       # Setup Terraform
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v3
-
-#       # Terraform Init
-#       - name: Terraform Init
-#         env:
-#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-#         run: |
-#           terraform init \
-#             -backend-config="bucket=${{ env.TF_BUCKET }}" \
-#             -backend-config="prefix=vector/${{ steps.product.outputs.product }}-prod"
-#         working-directory: deploy/terraform
-
-#       # Terraform Apply
-#       - name: Terraform Apply (Prod)
-#         env:
-#           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-#         run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
-#         working-directory: deploy/terraform
-
-
 name: Deploy Vector Collector
 
 on:
-  workflow_run:
-    workflows: ["Terraform Plan"]
-    types:
-      - completed
+  push:
+    branches:
+      - main
 
 jobs:
   deploy-dev:
@@ -223,7 +14,6 @@ jobs:
     env:
       REGION: europe-west3
       TF_BUCKET: vector-datadog-tfstate-ash
-
     outputs:
       tag: ${{ steps.set-tag.outputs.tag }}
 
@@ -231,23 +21,36 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download metadata from plan
-        uses: actions/download-artifact@v4
-        with:
-          name: build-metadata
+      # Parse product
+      # - name: Parse product
+      #   id: product
+      #   run: |
+      #     PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
+      #     if [ -z "$PRODUCT" ]; then
+      #       PRODUCT="br"  # fallback
+      #     fi
+      #     echo "product=$PRODUCT" >> $GITHUB_OUTPUT
 
-      - name: Read product and tag
-        id: set-values
+      - name: Parse product from changes
+        id: product
         run: |
-          PRODUCT=$(cat product.txt)
-          TAG=$(cat tag.txt)
-          echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          FILES=$(git diff --name-only origin/main...HEAD)
+          echo "Changed files:"
+          echo "$FILES"
 
-      - name: Parse gcp_project and pubsub_topic_name from tfvars
+          PRODUCT=$(echo "$FILES" | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
+          if [ -z "$PRODUCT" ]; then
+            echo "❌ No product changes detected. Skipping workflow."
+            exit 0
+          fi
+          echo "Detected product: $PRODUCT"
+          echo "product=$PRODUCT" >> $GITHUB_OUTPUT
+
+      # Parse gcp_project and pubsub_topic_name from tfvars
+      - name: Parse variables from tfvars
         id: tfvars
         run: |
-          TFVARS_FILE=products/${{ steps.set-values.outputs.product }}/terraform.dev.tfvars
+          TFVARS_FILE=products/${{ steps.product.outputs.product }}/terraform.dev.tfvars
           echo "Looking for tfvars file at: $TFVARS_FILE"
           GCP_PROJECT=$(grep -E '^ *gcp_project *=' "$TFVARS_FILE" | cut -d '"' -f2)
           PUBSUB_TOPIC_NAME=$(grep -E '^ *pubsub_topic_name *=' "$TFVARS_FILE" | cut -d '"' -f2)
@@ -264,12 +67,14 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      # Configure Docker auth
       - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
+      # Render vector.yaml from template
       - name: Render vector.yaml
         run: |
-          TEMPLATE_FILE=products/${{ steps.set-values.outputs.product }}/vector.yaml.tmpl
+          TEMPLATE_FILE=products/${{ steps.product.outputs.product }}/vector.yaml.tmpl
           OUTPUT_FILE=vector.yaml
           cat "$TEMPLATE_FILE" \
             | sed "s|\${gcp_project}|${{ steps.tfvars.outputs.gcp_project }}|g" \
@@ -278,11 +83,18 @@ jobs:
           echo "Rendered vector.yaml:"
           cat "$OUTPUT_FILE"
 
+      # Generate image tag
+      - name: Generate tag
+        id: tag
+        run: echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      # Ensure Artifact Registry exists
       - name: Ensure Artifact Registry exists
         run: |
-          REPO_NAME="vector-${{ steps.set-values.outputs.product }}-repository"
+          REPO_NAME="vector-${{ steps.product.outputs.product }}-repository"
           REGION="${{ env.REGION }}"
           PROJECT_ID="${{ steps.tfvars.outputs.gcp_project }}"
+
           if ! gcloud artifacts repositories describe "$REPO_NAME" --location="$REGION" --project="$PROJECT_ID" >/dev/null 2>&1; then
             echo "Repository does not exist. Creating..."
             gcloud artifacts repositories create "$REPO_NAME" \
@@ -294,30 +106,39 @@ jobs:
             echo "Repository already exists."
           fi
 
+      # Build and push image
       - name: Build and push image
         run: |
-          IMAGE_URI="${{ env.REGION }}-docker.pkg.dev/${{ steps.tfvars.outputs.gcp_project }}/vector-${{ steps.set-values.outputs.product }}-repository/my-vector-local:${{ steps.set-values.outputs.tag }}"
+          IMAGE_URI="${{ env.REGION }}-docker.pkg.dev/${{ steps.tfvars.outputs.gcp_project }}/vector-${{ steps.product.outputs.product }}-repository/my-vector-local:${{ steps.tag.outputs.tag }}"
           echo "IMAGE_URI=$IMAGE_URI"
           docker build -t "$IMAGE_URI" .
           docker push "$IMAGE_URI"
 
+      # Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      # Terraform Init
       - name: Terraform Init
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: |
           terraform init \
             -backend-config="bucket=${{ env.TF_BUCKET }}" \
-            -backend-config="prefix=vector/${{ steps.set-values.outputs.product }}-dev"
+            -backend-config="prefix=vector/${{ steps.product.outputs.product }}-dev"
         working-directory: deploy/terraform
 
+      # Terraform Apply
       - name: Terraform Apply (Dev)
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-        run: terraform apply -auto-approve -var="image_tag=${{ steps.set-values.outputs.tag }}" -var-file="../../products/${{ steps.set-values.outputs.product }}/terraform.dev.tfvars"
+        run: terraform apply -auto-approve -var="image_tag=${{ steps.tag.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.dev.tfvars"
         working-directory: deploy/terraform
+
+      # Export tag for prod
+      - name: Set output tag
+        id: set-tag
+        run: echo "tag=${{ steps.tag.outputs.tag }}" >> $GITHUB_OUTPUT
 
   deploy-prod:
     needs: deploy-dev
@@ -333,23 +154,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Download metadata from plan
-        uses: actions/download-artifact@v4
-        with:
-          name: build-metadata
-
-      - name: Read product and tag
-        id: set-values
+      # Parse product
+      - name: Parse product
+        id: product
         run: |
-          PRODUCT=$(cat product.txt)
-          TAG=$(cat tag.txt)
+          PRODUCT=$(git diff --name-only origin/main...HEAD | grep '^products/' | awk -F'/' '{print $2}' | sort | uniq | head -n 1)
+          if [ -z "$PRODUCT" ]; then
+            echo "No Product to pass"
+            exit 1
+          fi
           echo "product=$PRODUCT" >> $GITHUB_OUTPUT
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
 
+      # Parse gcp_project from tfvars
       - name: Parse gcp_project from tfvars
         id: tfvars
         run: |
-          TFVARS_FILE=products/${{ steps.set-values.outputs.product }}/terraform.prod.tfvars
+          TFVARS_FILE=products/${{ steps.product.outputs.product }}/terraform.prod.tfvars
           echo "Looking for tfvars file at: $TFVARS_FILE"
           GCP_PROJECT=$(grep -E '^ *gcp_project *=' "$TFVARS_FILE" | cut -d '"' -f2)
           if [ -z "$GCP_PROJECT" ]; then
@@ -364,20 +184,23 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      # Setup Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      # Terraform Init
       - name: Terraform Init
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
         run: |
           terraform init \
             -backend-config="bucket=${{ env.TF_BUCKET }}" \
-            -backend-config="prefix=vector/${{ steps.set-values.outputs.product }}-prod"
+            -backend-config="prefix=vector/${{ steps.product.outputs.product }}-prod"
         working-directory: deploy/terraform
 
+      # Terraform Apply
       - name: Terraform Apply (Prod)
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ steps.auth.outputs.credentials_file_path }}
-        run: terraform apply -auto-approve -var="image_tag=${{ steps.set-values.outputs.tag }}" -var-file="../../products/${{ steps.set-values.outputs.product }}/terraform.prod.tfvars"
+        run: terraform apply -auto-approve -var="image_tag=${{ needs.deploy-dev.outputs.tag }}" -var-file="../../products/${{ steps.product.outputs.product }}/terraform.prod.tfvars"
         working-directory: deploy/terraform
